--- a/_layout.jade
+++ b/_layout.jade
@@ -3,6 +3,7 @@ html(lang='en')
   head
     title= title
     meta(name='viewport', content='width=device-width, initial-scale=1')
+    link(rel='stylesheet', href='styles/bulma.css')
     link(rel='stylesheet', href='styles/main.css')
   body
     != yield
@@ -12,4 +13,4 @@ html(lang='en')
       integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=',
       crossorigin='anonymous')
 
-    script(src='/js/index.js')
+    script(src='js/index.js')
