--- a/styles/main.sass
+++ b/styles/main.sass
@@ -1,4 +1,3 @@
-@import 'styles/bulma/bulma.sass'
 @import url(https://use.fontawesome.com/6af5da50a4.css)
 @import url(https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700)
 
@@ -25,7 +24,7 @@ header
   text-align: right
 
   a
-    color: $white
+    color: #fff
     text-shadow: 2px 2px 4px #000000;
 
 
@@ -45,15 +44,15 @@ header
   width: 100%
 
   h1, h2, a
-    color: $white
+    color: #fff
     text-shadow: 2px 2px 2px #000000;
 
 #aboutMe
   background-color: $bg-color
-  background: -webkit-linear-gradient($bg-color, $white)
-  background: -o-linear-gradient($bg-color, $white)
-  background: -moz-linear-gradient($bg-color, $white)
-  background: linear-gradient($bg-color, $white)
+  background: -webkit-linear-gradient($bg-color, #fff)
+  background: -o-linear-gradient($bg-color, #fff)
+  background: -moz-linear-gradient($bg-color, #fff)
+  background: linear-gradient($bg-color, #fff)
 
 #projects
   padding: 0 0.9rem;
@@ -81,11 +80,11 @@ header
   transform: translateY(5px)
 
 .scroll
-  color: $white
+  color: #fff
   text-shadow: 2px 2px 2px #000000;
 
 .scroll:hover
-    color: $white
+    color: #fff
 
 .card-image-container
   display: flex
@@ -112,8 +111,19 @@ header
     opacity: 0.75
     transition: all .2s
     .hover
-      @extend .tag
-      @extend .is-dark
+      align-items: center
+      background-color: #fff
+      border-radius: 3px
+      color: hsl(0, 0%, 29%)
+      font-size: 0.75rem
+      height: 2em
+      justify-content: center
+      line-height: 1.5
+      padding-left: 0.75em
+      padding-right: 0.75em
+      white-space: nowrap
+      background-color:#363636
+      color:#f5f5f5
       position: absolute
       display: flex
       left: 50%
