--- a/_layout.jade
+++ b/_layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   head
-    title= title
+    title='Mac Merpaw'
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='styles/bulma.css')
     link(rel='stylesheet', href='styles/main.css')
