--- a/index.jade
+++ b/index.jade
@@ -33,10 +33,10 @@ section.hero.is-fullheight(id="aboutMe")
             div.column
               div.subtitle.is-underlined.about-me-title About Me
               div.content
-                | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                | eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                | veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                | consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                | My name is Mac Merpaw and I'm a Developer living in London, ON. I'm a passionate developer,
+                | and I'm currently finishing my education at Fanshawe College. I'm proficient at both front-end and
+                | back-end web development, using many different technologies. When I'm not programming, I enjoy
+                | playing guitar, and reading comic books.
               div.subtitle.is-underlined.about-me-title Languages, Frameworks & Libraries
 
               div.content.framework-images
@@ -123,10 +123,9 @@ section(id="projects")
 
         div.card-content
           div.content
-            | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            | eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            | veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            | consequat.
+            | A shopping website made for the web development course at Fanshawe College.
+            | Users are able to view products, make purchases, view their receipts and find stores using
+            | Google Maps.
 
         div.framework-images-footer
           hr
@@ -148,34 +147,6 @@ section(id="projects")
           footer.card-footer
             a.card-footer-item(href='https://github.com/GrumpyGus/eStoreProject') View Repo
 
-    div.column
-      div.card.is-fullwidth.is-equal-height
-        header.card-header
-          p.card-header-title Project 3
-        div.card-image
-          figure.image.is-16by9
-            img(src="https://bulma.io/images/placeholders/1280x960.png", alt="Portrait")
-
-        div.card-content
-          div.content
-            | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            | eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            | veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            | consequat.
-
-        div.framework-images-footer
-          hr
-          div.content.framework-images
-            figure.image
-              img(src="images/html5.png", alt="HTML5")
-            figure.image
-              img(src="images/css3.png", alt="CSS3")
-            figure.image
-              img(src="images/js.png", alt="JavaScript/ES6")
-          footer.card-footer
-            a.card-footer-item(href='#') View Site
-            a.card-footer-item(href='#') View Repo
-
 
 footer.footer
   div.container
@@ -184,4 +155,4 @@ footer.footer
           |Site Created by Mac Merpaw.
           |Check out the #[a(href="https://github.com/GrumpyGus/Portfolio") repository]!
         div
-          |Created using Node.JS, Harp and Bulma
+          |Created using Harp, CoffeeScript, Jade, and Bulma
