Changed 'about me' section grammar

--- a/index.jade
+++ b/index.jade
@@ -33,9 +33,9 @@ section.hero.is-fullheight(id="aboutMe")
             div.column
               div.subtitle.is-underlined.about-me-title About Me
               div.content
-                | My name is Mac Merpaw and I'm a Developer living in London, ON. I'm a passionate developer,
-                | and I'm currently finishing my education at Fanshawe College. I'm proficient at both front-end and
-                | back-end web development, using many different technologies. When I'm not programming, I enjoy
+                | My name is Mac Merpaw and I am a Developer living in London, ON. I am a passionate developer,
+                | and I am currently finishing my education at Fanshawe College. I am proficient at both front-end and
+                | back-end web development, using many different technologies. When I am not programming, I enjoy
                 | playing guitar, and reading comic books.
               div.subtitle.is-underlined.about-me-title Languages, Frameworks & Libraries
 
@@ -152,7 +152,7 @@ footer.footer
   div.container
     div.content.has-text-centered
         div
-          |Site Created by Mac Merpaw.
-          |Check out the #[a(href="https://github.com/GrumpyGus/Portfolio") repository]!
+          | Site Created by Mac Merpaw. Check out the&nbsp;
+          | #[a(href="https://github.com/GrumpyGus/Portfolio") repository]!
         div
-          |Created using Harp, CoffeeScript, Jade, and Bulma
+          | Created using Harp, CoffeeScript, Jade, and Bulma
