Updated the about me section

--- a/index.jade
+++ b/index.jade
@@ -34,7 +34,7 @@ section.hero.is-fullheight(id="aboutMe")
               div.subtitle.is-underlined.about-me-title About Me
               div.content
                 | My name is Mac Merpaw and I am a Developer living in London, ON. I am a passionate developer,
-                | and I am currently finishing my education at Fanshawe College. I am proficient at both front-end and
+                | and a graduate from Fanshawe College. I am proficient at both front-end and
                 | back-end web development, using many different technologies. When I am not programming, I enjoy
                 | playing guitar, and reading comic books.
               div.subtitle.is-underlined.about-me-title Languages, Frameworks & Libraries
